Fix issue with text overlay not being aligned middle, broken the indicators

--- a/catalog/view/theme/sealskinz/stylesheet/stylesheet.css
+++ b/catalog/view/theme/sealskinz/stylesheet/stylesheet.css
@@ -439,11 +439,80 @@ a:hover {
     border-left: 1px solid #CCC;
 }
 
+/* banner */
+.bannerWrapper {
+    position: relative;
+}
+.bannerWrapper .outerContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.bannerWrapper img.bannerImage {
+    width: 100%;
+}
+.bannerWrapper .container {
+    line-height: 321px;
+    height: 321px;
+    font-size: 27px;
+}
+.bannerWrapper .container .innerContainer {
+    width: 100%;
+    vertical-align: middle;
+    text-align: left;
+    color: #fff;
+    line-height: 1.2em;
+    display: inline-block; zoom: 1; *display: inline;
+}
+.bannerWrapper .innerContainer > div {
+    width: 25em;
+}
+.bannerWrapper .innerContainer h1 {
+    color: #9dc96a;
+    font-size: 2em;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px #696d6c;
+    margin-bottom: 12px;
+    margin-top: 0;
+}
+.bannerWrapper .innerContainer h2 {
+    color: #FFFFFF;
+    font-size: 1.4em;
+    font-weight: bold;
+    text-shadow: 2px 2px 3px #696d6c;
+    margin-bottom: 12px;
+    margin-top: 0;
+}
+.bannerWrapper .innerContainer p {
+    text-shadow: 2px 2px 3px #afb4b8;
+    line-height: 1.1em;
+}
+.bannerWrapper .innerContainer a {
+    text-shadow: 2px 2px 3px #000000;
+    line-height: 1.1em;
+}
+.bannerWrapper .bannerRight {
+    float: right;
+}
+
 #myCarousel {
     margin-bottom: 0;
     background: #000;
     position: relative;
     overflow: hidden;
+}
+#myCarousel > img {
+    width: 100%;
+}
+#myCarousel .carousel-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#myCarousel .container {
+    line-height: 473px;
+    height: 473px;
 }
 #myCarousel .carouselBasebarContainer {
     position: absolute;
@@ -465,71 +534,7 @@ a:hover {
     width: auto;
 }
 #myCarousel .carouselBasebarContainer .imgGreat {
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-}
-#myCarousel .carousel-inner {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-#myCarousel .carousel-inner #text {
-    position: absolute;
-    z-index: 0;
-    top:30px;
-    left:30px;
-    color:#9cc663;
-    font-size: 52px;
-    font-weight: bold;
-}
-#myCarousel .carousel-inner .bannerWrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-#myCarousel .carousel-inner .bannerWrapper .container{
-    width: 984px; 
-}
-#myCarousel .carousel-inner .bannerWrapper .container > div {
-    width: 25em;
-    text-align: left;
-    font-size: 27px;
-    color: #fff;
-}
-#myCarousel .carousel-inner .bannerWrapper .container > div h1 {
-    color: #9dc96a;
-    font-size: 2em;
-    font-weight: bold;
-    text-shadow: 2px 2px 3px #696d6c;
-    margin-bottom: 12px;
-    margin-top: 0;
-}
-#myCarousel .carousel-inner .bannerWrapper .container > div h2 {
-    color: #FFFFFF;
-    font-size: 1.4em;
-    font-weight: bold;
-    text-shadow: 2px 2px 3px #696d6c;
-    margin-bottom: 12px;
-    margin-top: 0;
-}
-#myCarousel .carousel-inner .bannerWrapper .container > div p {
-    text-shadow: 2px 2px 3px #afb4b8;
-    line-height: 1.1em;
-}
-#myCarousel .carousel-inner .bannerWrapper .container > div a {
-    text-shadow: 2px 2px 3px #000000;
-    line-height: 1.1em;
-}
-.banner .image .bannerRight {
-    float: right;
-}
-#myCarousel img {
-    width: 100%;
-}
-.carousel-indicators{
-    top: 0;
+    display: inline-block;*display: inline;*zoom: 1;
 }
 #myCarousel .carousel-indicators {
 right: auto;
@@ -2376,45 +2381,7 @@ a.button-account:hover, input.button-account:hover {
     height: 26px;
     font-size: 16px;
 }
-/* banner */
-.banner div {
-    text-align: center;
-    width: 100%;
-}
-.banner div img {
-    width: 100%;
-}
-.banner .image .bannerWrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-.banner .image .bannerWrapper .container{
-    width: 984px;
-    padding-top: 20px; 
-}
-.banner .image .bannerWrapper .container > div {
-    width: 25em;
-    text-align: left;
-    font-size: 27px;
-    color: #fff;
-}
-.banner .image .bannerWrapper .container > div h1 {
-    color: #9dc96a;
-    font-size: 2em;
-    font-weight: bold;
-    text-shadow: 2px 2px 3px #696d6c;
-    margin-bottom: 12px;
-    margin-top: 0;
-}
-.banner .image .bannerWrapper .container > div p {
-    text-shadow: 2px 2px 3px #afb4b8;
-    line-height: 1.1em;
-}
-.banner .image .bannerRight {
-    float: right;
-}
+
 /******* Start Menu nuovo ******************************************************/
 /* Menu CSS */ 
 #cssmenu{
